--- a/vignettes/mediation.bib
+++ b/vignettes/mediation.bib
@@ -1,11 +1,43 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for Hirose Kentaro at 2013-07-29 02:50:25 -0400 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@article{Zhang:2009,
+	Author = {Zhang, Zhen, and Michael J. Zyphur, and Kristopher J. Preacher},
+	Date-Added = {2013-07-29 02:47:30 -0400},
+	Date-Modified = {2013-07-29 02:50:06 -0400},
+	Journal = {Organizational Research Methods},
+	Month = {October},
+	Number = {4},
+	Pages = {695-719},
+	Title = {Testing Multilevel Mediation Using Hierarchical Linear Models},
+	Volume = {12},
+	Year = {2009}}
+
+@article{Krull:2001,
+	Author = {Krull, Jennifer L., and David P. MacKinnon},
+	Date-Added = {2013-07-29 02:43:50 -0400},
+	Date-Modified = {2013-07-29 02:47:21 -0400},
+	Journal = {Multivariate Behavioral Research},
+	Number = {2},
+	Pages = {249-277},
+	Title = {Multilevel Modeling of Individual and Group Level Mediated Effects},
+	Volume = {36},
+	Year = {2001}}
+
 @book{MacKinnon:2008,
 	Address = {New York, NY},
 	Author = {MacKinnon, David},
 	Publisher = {Routledge},
 	Title = {Introduction to Statistical Mediation Analysis},
 	Year = {2008}}
-
-
 
 @article{imai:keel:yama:10,
 	Author = {Imai, Kosuke and Keele, Luke and Yamamoto, Teppei},
@@ -15,19 +47,17 @@
 	Pages = {51--71},
 	Title = {Identification, Inference, and Sensitivity Analysis for Causal Mediation Effects},
 	Volume = {25},
-	Year = {2010}
-}
+	Year = {2010}}
 
-
-@article {ImaiAPSR,
-	title = {Unpacking the Black Box: Learning about Causal Mechanisms from Experimental and Observational Studies},
-	journal = {American Political Science Review},
-	volume = {105},
-	year = {2011},
-	pages = {765-789},
-	url = {http://imai.princeton.edu/research/mediationP.html},
-	author = {Imai, Kosuke and Keele, Luke and Tingley, Dustin and Yamamoto, Teppei}
-}
+@article{ImaiAPSR,
+	Author = {Imai, Kosuke and Keele, Luke and Tingley, Dustin and Yamamoto, Teppei},
+	Journal = {American Political Science Review},
+	Pages = {765-789},
+	Title = {Unpacking the Black Box: Learning about Causal Mechanisms from Experimental and Observational Studies},
+	Url = {http://imai.princeton.edu/research/mediationP.html},
+	Volume = {105},
+	Year = {2011},
+	Bdsk-Url-1 = {http://imai.princeton.edu/research/mediationP.html}}
 
 @article{imai:keel:ting:10,
 	Author = {Imai, Kosuke and Keele, Luke and Tingley, Dustin},
@@ -37,117 +67,84 @@
 	Pages = {309--334},
 	Title = {A General Approach to Causal Mediation Analysis},
 	Volume = {15},
-	Year = {2010}
-}
+	Year = {2010}}
 
-@article {ImaiDesign,
-	title = {Experimental Designs for Identifying Causal Mechanisms (with discussions)},
-	journal = {Journal of the Royal Statistical Society, Series {A} (Statistics in Society)},
-	year = {2012},
-	url = {http://imai.princeton.edu/research/Design.html},
-	author = {Kosuke Imai and Tingley, Dustin and Teppei Yamamoto}
-}
+@article{ImaiDesign,
+	Author = {Kosuke Imai and Tingley, Dustin and Teppei Yamamoto},
+	Journal = {Journal of the Royal Statistical Society, Series {A} (Statistics in Society)},
+	Title = {Experimental Designs for Identifying Causal Mechanisms (with discussions)},
+	Url = {http://imai.princeton.edu/research/Design.html},
+	Year = {2012},
+	Bdsk-Url-1 = {http://imai.princeton.edu/research/Design.html}}
 
-
-@article {MediateStata,
-	title = {Causal Mediation Analysis},
-	journal = {Stata Journal},
-	volume = {11},
-	year = {2011},
-	pages = {609-615},
-	attachments = {http://scholar.harvard.edu/sites/scholar.iq.harvard.edu/files/dtingley/files/mediationstata_0.pdf},
-	author = {Raymond Hicks and Tingley, Dustin}
-}
+@article{MediateStata,
+	Attachments = {http://scholar.harvard.edu/sites/scholar.iq.harvard.edu/files/dtingley/files/mediationstata_0.pdf},
+	Author = {Raymond Hicks and Tingley, Dustin},
+	Journal = {Stata Journal},
+	Pages = {609-615},
+	Title = {Causal Mediation Analysis},
+	Volume = {11},
+	Year = {2011}}
 
 @article{baro:kenn:86,
-  Author =	 {Baron, Reuben M. and Kenny, David A.},
-  Journal =	 {Journal of Personality and Social Psychology},
-  Number =	 6,
-  Pages =	 {1173--1182},
-  Title =	 {The Moderator-Mediator Variable Distinction in
-                  Social Psychological Research: Conceptual,
-                  Strategic, and Statistical Considerations},
-  Volume =	 51,
-  Year =	 1986
-}
-
-
+	Author = {Baron, Reuben M. and Kenny, David A.},
+	Journal = {Journal of Personality and Social Psychology},
+	Number = 6,
+	Pages = {1173--1182},
+	Title = {The Moderator-Mediator Variable Distinction in                   Social Psychological Research: Conceptual,                   Strategic, and Statistical Considerations},
+	Volume = 51,
+	Year = 1986}
 
 @article{haav:43,
-  Author =	 {Haavelmo, Trygve},
-  Journal =	 {Econometrica},
-  Pages =	 {1--12},
-  Title =	 {The Statistical Implications of a System of
-                  Simultaneous Equations},
-  Volume =	 11,
-  Year =	 1943
-}
-
-
+	Author = {Haavelmo, Trygve},
+	Journal = {Econometrica},
+	Pages = {1--12},
+	Title = {The Statistical Implications of a System of                   Simultaneous Equations},
+	Volume = 11,
+	Year = 1943}
 
 @book{shad:cook:camp:01,
-  Address =	 {Boston},
-  Author =	 {Shadish, William R. and Cook, Thomas D. and
-                  Campbell, Donald T.},
-  Publisher =	 {Houghton Mifflin},
-  Title =	 {Experimental and Quasi-Experimental Designs for
-                  Generalized Causal Inference},
-  Year =	 2001
-}
-
-
+	Address = {Boston},
+	Author = {Shadish, William R. and Cook, Thomas D. and                   Campbell, Donald T.},
+	Publisher = {Houghton Mifflin},
+	Title = {Experimental and Quasi-Experimental Designs for                   Generalized Causal Inference},
+	Year = 2001}
 
 @article{robi:gree:92,
-  Author =	 {Robins, James M. and Greenland, Sander},
-  Journal =	 {Epidemiology},
-  Month =	 {march},
-  Number =	 2,
-  Pages =	 {143--155},
-  Title =	 {Identifiability and exchangeability for direct and
-                  indirect effects},
-  Volume =	 3,
-  Year =	 1992
-}
-
-
+	Author = {Robins, James M. and Greenland, Sander},
+	Journal = {Epidemiology},
+	Month = {march},
+	Number = 2,
+	Pages = {143--155},
+	Title = {Identifiability and exchangeability for direct and                   indirect effects},
+	Volume = 3,
+	Year = 1992}
 
 @inproceedings{pear:01,
-  Address =	 {San Francisco, CA},
-  Author =	 {Pearl, Judea},
-  Booktitle =	 {Proceedings of the Seventeenth Conference on
-                  Uncertainty in Artificial Intelligence},
-  Pages =	 {411--420},
-  Publisher =	 {Morgan Kaufmann},
-  Title =	 {Direct and Indirect Effects},
-  Year =	 2001
-}
+	Address = {San Francisco, CA},
+	Author = {Pearl, Judea},
+	Booktitle = {Proceedings of the Seventeenth Conference on                   Uncertainty in Artificial Intelligence},
+	Pages = {411--420},
+	Publisher = {Morgan Kaufmann},
+	Title = {Direct and Indirect Effects},
+	Year = 2001}
 
 @unpublished{imai:yama:11,
-  author = 	 {Imai, Kosuke and Yamamoto, Teppei},
-  title = 	 {Identification and Sensitivity Analysis for Multiple
-                  Causal Mechanisms: Revisiting Evidence from Framing Experiments},
-  year = 	 {2011},
-  OPTkey = 	 {},
-  OPTtype = 	 {},
-  OPTnumber = 	 {},
-  OPTaddress = 	 {},
-  OPTmonth = 	 {},
-  note = 	 {Working paper available at \url{http://imai.princeton.edu/research/medsens.html}},
-  OPTannote = 	 {}
-}
+	Author = {Imai, Kosuke and Yamamoto, Teppei},
+	Note = {Working paper available at \url{http://imai.princeton.edu/research/medsens.html}},
+	Title = {Identification and Sensitivity Analysis for Multiple                   Causal Mechanisms: Revisiting Evidence from Framing Experiments},
+	Year = {2011}}
 
-@inbook {imai:etal:10,
-	title = {Causal Mediation Analysis Using R},
-	booktitle = {Advances in Social Science Research Using R},
-	series = {Lecture Notes in Statistics},
-	year = {2010},
-	pages = {129-154},
-	publisher = {Springer},
-	organization = {Springer},
-	address = {New York},
-	author = {Kosuke Imai and Keele, Luke and Tingley, Dustin and Teppei Yamamoto}
-}
-
+@inbook{imai:etal:10,
+	Address = {New York},
+	Author = {Kosuke Imai and Keele, Luke and Tingley, Dustin and Teppei Yamamoto},
+	Booktitle = {Advances in Social Science Research Using R},
+	Organization = {Springer},
+	Pages = {129-154},
+	Publisher = {Springer},
+	Series = {Lecture Notes in Statistics},
+	Title = {Causal Mediation Analysis Using R},
+	Year = {2010}}
 
 @article{Brader:2008,
 	Author = {Brader, Ted and Nicholas A. Valentino and Elizabeth Suhat},
