--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@ version      date  description
 3.1      08/22/11  More functionalities added
 3.1.1    09/18/11  Bug in medsens weights fixed; damaged PDFs fixed
 3.1.2    09/19/11  Fixed wrong plots in the vignette
-3.1.3	 11/21/11  Import inconsistency with Matrix fixed
+3.1.3    11/21/11  Import inconsistency with Matrix fixed
 4.0      03/20/12  Design and multimed functions added, along with other new features
 4.0.1    04/20/12  Bug in mediate.ced fixed, along with new example data 
 4.1      05/31/12  multimed for parallel design; fixed typos in summary outputs
@@ -15,3 +15,4 @@ version      date  description
 4.2      12/18/12  multimed with multiple alternative mediators; cluster with missing data
 4.2.1    02/27/13  Mixed-effects (multilevel) models via lmer supported in mediate
 4.2.2    04/18/13  Bug fix for lmer; new option to plotting functions; package now depends on sandwich
+4.2.3    08/xx/13  Functions for testing moderated mediation and treatment-mediator interaction
