--- a/vignettes/mediation.bib
+++ b/vignettes/mediation.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Hirose Kentaro at 2013-07-29 02:50:25 -0400 
+%% Created for Hirose Kentaro at 2013-07-31 22:57:17 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,9 +10,9 @@
 
 
 @article{Zhang:2009,
-	Author = {Zhang, Zhen, and Michael J. Zyphur, and Kristopher J. Preacher},
-	Date-Added = {2013-07-29 02:47:30 -0400},
-	Date-Modified = {2013-07-29 02:50:06 -0400},
+	Author = {Zhang, Zhen and Zyphur, Michael J. and Preacher, Kristopher J.},
+	Date-Added = {2013-07-31 22:57:01 -0400},
+	Date-Modified = {2013-07-31 22:57:01 -0400},
 	Journal = {Organizational Research Methods},
 	Month = {October},
 	Number = {4},
@@ -22,15 +22,36 @@
 	Year = {2009}}
 
 @article{Krull:2001,
-	Author = {Krull, Jennifer L., and David P. MacKinnon},
-	Date-Added = {2013-07-29 02:43:50 -0400},
-	Date-Modified = {2013-07-29 02:47:21 -0400},
+	Author = {Krull, Jennifer L. and MacKinnon, David P.},
+	Date-Added = {2013-07-31 22:56:47 -0400},
+	Date-Modified = {2013-07-31 22:56:47 -0400},
 	Journal = {Multivariate Behavioral Research},
 	Number = {2},
 	Pages = {249-277},
 	Title = {Multilevel Modeling of Individual and Group Level Mediated Effects},
 	Volume = {36},
 	Year = {2001}}
+
+@article{Zeileis:2006,
+	Author = {Achim Zeileis},
+	Journal = {Journal of Statistical Software},
+	Number = {9},
+	Pages = {1--16},
+	Title = {Object-oriented Computation of Sandwich Estimators},
+	Url = {http://www.jstatsoft.org/v16/i09/.},
+	Volume = {16},
+	Year = {2006},
+	Bdsk-Url-1 = {http://www.jstatsoft.org/v16/i09/.}}
+
+@manual{CRAN:2012,
+	Address = {Vienna, Austria},
+	Author = {{R Core Team}},
+	Note = {{ISBN} 3-900051-07-0},
+	Organization = {R Foundation for Statistical Computing},
+	Title = {R: A Language and Environment for Statistical Computing},
+	Url = {http://www.R-project.org/},
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.R-project.org/}}
 
 @book{MacKinnon:2008,
 	Address = {New York, NY},
@@ -116,24 +137,28 @@
 	Month = {march},
 	Number = 2,
 	Pages = {143--155},
-	Title = {Identifiability and exchangeability for direct and                   indirect effects},
+	Title = {Identifiability and exchangeability for direct and indirect effects},
 	Volume = 3,
 	Year = 1992}
 
 @inproceedings{pear:01,
 	Address = {San Francisco, CA},
 	Author = {Pearl, Judea},
-	Booktitle = {Proceedings of the Seventeenth Conference on                   Uncertainty in Artificial Intelligence},
+	Booktitle = {Proceedings of the Seventeenth Conference on Uncertainty in Artificial Intelligence},
 	Pages = {411--420},
 	Publisher = {Morgan Kaufmann},
 	Title = {Direct and Indirect Effects},
 	Year = 2001}
 
-@unpublished{imai:yama:11,
+@article{imai:yama:11,
 	Author = {Imai, Kosuke and Yamamoto, Teppei},
-	Note = {Working paper available at \url{http://imai.princeton.edu/research/medsens.html}},
-	Title = {Identification and Sensitivity Analysis for Multiple                   Causal Mechanisms: Revisiting Evidence from Framing Experiments},
-	Year = {2011}}
+	Title = {Identification and Sensitivity Analysis for Multiple Causal Mechanisms: Revisiting Evidence from Framing Experiments},
+        Journal = {Political Analysis},
+	Year = {2013}, 
+        Volume = {21},
+        Number = {2},
+        Month = {Spring},
+        Pages = {141--171}}
 
 @inbook{imai:etal:10,
 	Address = {New York},
